<resources>
    <string name="app_name">News App</string>
    <string name="find">find the latest news here.</string>
    <string name="cap_news">NEWS APP</string>
    <string name="news">News</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_news">Detail News</string>
    <string name="author">Author</string>
    <string name="published_at">Published at</string>
    <string name="removed_favorite">removed from your favorite</string>
    <string name="add_favorite">add to your favorite</string>
    <string name="empty_favorite">You dont have a list of favorite :(</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="title">Title</string>
    <string name="try_again">Try Again</string>
</resources>